--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
-crypto==1.4.1
 cryptography==40.0.2
 distlib==0.3.6
+ecdsa==0.18.0
 filelock==3.12.0
 Flask==2.3.2
 Flask-Cors==3.0.10
@@ -21,11 +21,15 @@ jose==1.0.0
 MarkupSafe==2.1.2
 Naked==0.1.32
 platformdirs==3.5.0
+pyasn1==0.5.0
 pycparser==2.21
+pycryptodome==3.17
 PyJWT==2.3.0
+python-jose==3.3.0
 pytz==2023.3
 PyYAML==6.0
 requests==2.30.0
+rsa==4.9
 shellescape==3.8.1
 six==1.16.0
 SQLAlchemy==1.4.22
